# mePdf

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
core/include/mepdf/: core.h
core/src/: core.c
core/test/: core_abi_test.c
docs/: building.md  dependency-licenses.md
docs/adr/: 0001-use-an-agpl-c-core.md  0002-never-write-directly-to-the-source.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: pdf-stack.md
gradle/: libs.versions.toml
scripts/: verify-artifact.sh  verify-native.sh
